# fairplay

./: .gitignore  Cargo.toml  README.md  test.txt
docs/: frame.tldr
examples/: capture.rs  client.rs  transcode.rs
src/: main.rs  reciever.rs  server.rs
src/reciever/: Cargo.toml
src/reciever/src/: lib.rs
src/server/: Cargo.toml
src/server/src/: lib.rs
