[package]
name = "fairplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2021"
name = "fairplay"
path = "src/main.rs"

[dependencies]
mdns-sd = "0.5.9"
libmdns = "0.7.3"
httparse = "1.8.0"
hyper = {version = "1.0.0-rc.2", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
tokio = { version = "1.24.1", features = ["full"] }
hostname = "^0.3"
scrap = "0.5"
