[package]
name = "fairplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2021"
name = "fairplay"
path = "src/main.rs"

[[bin]]
name = "ws-server"
path = "src/ws-server.rs"

[[bin]]
name = "ws-client"
path = "src/ws-client.rs"

[dependencies]
mdns-sd = "0.5.9"
libmdns = "0.7.3"
tokio = { version = "1.24.1", features = ["full"] }
hostname = "^0.3"
scrap = "0.5"
axum = { version='0.6.4', features = ["ws", "headers"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
tokio-tungstenite = "0.18.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
